<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tool"
    tools:context=".MainActivity"> //це меню тільки для віконечка


    <item
        android:id="@+id/action_regestration"
        android:orderInCategory="100"
        android:title="@string/action_regestration"
        app:showAsAction="never"/>


    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never"/>


    <item
        android:id="@+id/action_aboutus"
        android:orderInCategory="100"
        android:title="@string/action_aboutus"
        app:showAsAction="never"/>

</menu>